<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:title="@string/color">
        <menu >
            <group android:checkableBehavior="single">
                <item android:id="@+id/bred" android:title="@string/color_red" android:checked="true"></item>
                <item android:id="@+id/bgreen" android:title="@string/color_green"></item>
                <item android:id="@+id/bblue" android:title="@string/color_blue"></item>
                <item android:id="@+id/byellow" android:title="@string/color_yellow"></item>
                <item android:id="@+id/bblack" android:title="@string/color_black"></item>
            </group>
        </menu>
	</item>
	
    <item android:title="@string/width">
        <menu >
            <group android:checkableBehavior="single">
                <item android:id="@+id/bwidth_1" android:title="@string/width_1" android:checked="true"></item>
                <item android:id="@+id/bwidth_2" android:title="@string/width_2"></item>
                <item android:id="@+id/bwidth_3" android:title="@string/width_3"></item>
            </group>
        </menu>
    </item>
    
    <item android:title="@string/paint">
        <menu >
            <group android:checkableBehavior="single">
                <item android:id="@+id/bline" android:title="@string/line" android:checked="true"></item>
                <item android:id="@+id/brectangle" android:title="@string/rectangle"></item>
             <!--  <item android:id="@+id/triangle" android:title="@string/triangle"></item> -->
                <item android:id="@+id/bcircle" android:title="@string/circle"></item>
                <item android:id="@+id/boval" android:title="@string/oval"></item>
            </group>
        </menu>
	</item>
    
    <item android:title="@string/clear">
        <menu >
            <group android:checkableBehavior="single">
                <item android:id="@+id/beraser_width_1" android:title="@string/eraser_width_1" android:checked="true"></item>
                <item android:id="@+id/beraser_width_2" android:title="@string/eraser_width_2"></item>
                <item android:id="@+id/beraser_width_3" android:title="@string/eraser_width_3"></item>
            </group>
        </menu>
    </item>
    <item android:id="@+id/brevoke" android:title="@string/revoke"/>
    <item android:id="@+id/brecovery" android:title="@string/recovery"/>
    <item android:id="@+id/bclear" android:title="@string/clearAll"/>
    <item android:id="@+id/bsave" android:title="@string/save"/>
</menu>
