<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <RadioGroup 
        android:id="@+id/rg_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <RadioButton 
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line"
            />
        
        <RadioButton 
            android:id="@+id/rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangle"/>
        
        <RadioButton 
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle"/>
        
        <RadioButton 
            android:id="@+id/oval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oval"/>
        
        <RadioButton 
            android:id="@+id/straightline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/straightline"/>
    </RadioGroup>

</LinearLayout>
