<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <RadioGroup 
        android:id="@+id/rg_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <RadioButton 
            android:id="@+id/color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_red"
            />
        
        <RadioButton 
            android:id="@+id/color_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_green"/>
        
        <RadioButton 
            android:id="@+id/color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_blue"/>
        
        <RadioButton 
            android:id="@+id/color_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_yellow"/>
        
        <RadioButton 
            android:id="@+id/color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_black"/>
        
        
    </RadioGroup>

</LinearLayout>
