<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/normal_bg" >

    <Button
        android:id="@+id/bt_paint"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/paint_sel"
        android:text="@string/bt_paint" />  
    
    <Button
        android:id="@+id/bt_doublepaint"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_paint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/update_sel"
        android:text="@string/bt_doublepaint" />
    
    <Button
        android:id="@+id/bt_settings"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_doublepaint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/settings_sel"
        android:text="@string/bt_setting" />
    
    <Button
        android:id="@+id/bt_about"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/about_sel"
        android:text="@string/bt_about" />

</RelativeLayout>
