<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <RadioGroup 
        android:id="@+id/rg_eraser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <RadioButton 
            android:id="@+id/eraser_width_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraser_width_1"/>
        
        <RadioButton 
            android:id="@+id/eraser_width_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraser_width_2"/>
        
        <RadioButton 
            android:id="@+id/eraser_width_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eraser_width_3"/>
    </RadioGroup>

</LinearLayout>
