<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt_savepath"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/paint_sel"
        android:text="@string/bt_savepath" />
    
    <Button
        android:id="@+id/bt_update"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_savepath"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/update_sel"
        android:text="@string/bt_update" />
    
    <Button
        android:id="@+id/bt_openblue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_update"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/settings_sel"
        android:text="@string/bt_bluetoothsetting" />
    
    <Button
        android:id="@+id/bt_loadpath"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_openblue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/about_sel"
        android:text="@string/bt_loadpath" />

</RelativeLayout>
