<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg3">

    <Button
        android:id="@+id/bt_enable"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/paint_sel"      
        android:text="@string/bt_openbluetooth" />
    
    <Button
        android:id="@+id/bt_view_paired"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_enable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/update_sel"
        android:enabled="false"
        android:text="@string/bt_paired" />
    
    <Button
        android:id="@+id/bt_scan"
       android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_view_paired"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/settings_sel"        
        android:enabled="false"
        android:text="@string/bt_scan" />
    
</RelativeLayout>
